@@ -1,0 +1,20 @@
+﻿all passed			= Поздравления! Конфигурацията на вашия сървър удовлетворява всички изисквания на PRADO.
+passed with warnings		= Конфигурацията на вашия сървър удовлетворява минималните изисквания на PRADO. Моля, обърнете внимание на предупрежденията по-долу.
+failed				= За съжаление, вашият сървър не удовлетворява изискванията на PRADO.
+PHP version check		= Проверка за версията на PHP
+PHP 5.0.4 or higher required	= Изисква се PHP 5.0.4 или по-висока версия.
+PHP 5.1.0 or higher preferred	= Препоръчва се PHP 5.1.0 или по-висока версия. Това ще предотврати грешката предизвикана от рекурсивните __get/__set извиквания.
+SQLite extension check		= Проверка за SQLite
+SQLite extension optional	= SQLite разширението е незадължително. Ако не е заредено, няма да можете да ползвате TSqliteCache.
+Memcache extension check	= Проверка за Memcache
+Memcache extension optional	= Memcache разширението е незадължително. Ако не е заредено, няма да можете да ползвате TMemCache.
+APC extension check		= Проверка за APC cache
+APC extension optional		= APC разширението е незадължително. Ако не е заредено, няма да можете да ползвате TAPCCache.
+Zlib extension check		= Проверка за Zlib
+Zlib extension optional		= Zlib разширението е незадължително. Ако не е заредено, състоянието на страницата няма да бъде компресирано и размера на страницата може да се увеличи.
+DOM extension check		= Проверка за DOM разширението
+DOM extension required		= DOM разширението е задължително за PRADO. Използва се в TXmlDocument за анализ на XML-базирани конфигурации.
+ICONV extension check		= Проверка за ICONV функцията
+ICONV extension optional	= ICONV разширението е незадължително. Ако не е заредено, е възможно някои компоненти свързани с интернационализацията да не работят коректно.
+Mcrypt extension check		= Проверка за Mcrypt
+Mcrypt extension optional	= Mcrypt разширението е незадължително. Ако не е заредено, чувствителни данни като viewstate, няма да могат да бъдат криптирани.
