@@ -4,14 +4,17 @@ failed = 对不起，您的服务器配置不符合PRADO的要求。
 PHP version check = PHP版本检查
 PHP 5.0.4 or higher required = PRADO需要PHP 5.0.4或更高版本。
 PHP 5.1.0 or higher preferred = PRADO推荐使用PHP 5.1.0或更高版本。它将避免由于递归调用__get/__call引起的错误。
-SQLite check = SQLite模块检查
+SQLite extension check = SQLite模块检查
 SQLite extension optional = SQLite模块是可选的。如果它不存在，您将无法使用TSQLiteCache。
-Memcache check = Memcache模块检查
+Memcache extension check = Memcache模块检查
 Memcache extension optional = Memcache模块是可选的。如果它不存在，您将无法使用TMemCache。
-APC cache check = APC缓存模块检查
+APC extension check = APC缓存模块检查
 APC extension optional = APC模块是可选的。如果它不存在，您将无法使用TAPCCache。
-Zlib check = Zlib模块检查
+Zlib extension check = Zlib模块检查
 Zlib extension optional	= Zlib模块是可选的。如果它不存在，页面的状态信息将无法压缩，由此可能导致您的页面传送数据量增大。
+DOM extension check = DOM模块检查
 DOM extension required = DOM模块是必须的。如果它不存在，基于XML的各种配置文件将无法解析。
+ICONV extension check = ICONV模块检查
 ICONV extension optional = ICONV模块是可选的。如果它不存在，某些国际化控件将无法正常工作。
+Mcrypt extension check = Mcrypt模块检查
 Mcrypt extension optional = Mcrypt模块是可选的。如果它不存在，某些敏感数据，例如viewstate，将无法被加密。
