@@ -4,14 +4,17 @@ failed								= Sorry, your server configuration does not satisfy the requiremen
 PHP version check					= PHP version check
 PHP 5.0.4 or higher required		= PHP version 5.0.4 or higher is required by PRADO.
 PHP 5.1.0 or higher preferred		= PHP version 5.1.0 or higher is preferred by PRADO. It eliminates the error caused by recursive __get/__set calls.
-SQLite check						= SQLite check
+SQLite extension check				= SQLite extension check
 SQLite extension optional			= SQLite extension is optional. If it is absent, you will not be able to use TSqliteCache.
-Memcache check						= Memcache check
+Memcache extension check			= Memcache extension check
 Memcache extension optional			= Memcache extension is optional. If it is absent, you will not be able to use TMemCache.
-APC cache check						= APC cache check
+APC extension check					= APC extension check
 APC extension optional				= APC extension is optional. If it is absent, you will not be able to use TAPCCache.
-Zlib check							= Zlib check
+Zlib extension check				= Zlib extension check
 Zlib extension optional				= Zlib extension is optional. If it is absent, page state will not be compressed and your page size may increase.
+DOM extension check					= DOM extension check
 DOM extension required				= DOM extension is required by PRADO. It is used in TXmlDocument to parse all sorts of XML-based configurations.
+ICONV extension check				= ICONV extension check
 ICONV extension optional			= ICONV extension is optional. If it is absent, some internationalization components may not work properly.
+Mcrypt extension check				= Mcrypt extension check
 Mcrypt extension optional			= Mcrypt extension is optional. If it is absent, sensitive data, such as viewstate, cannot be encrypted.
