@@ -1,0 +1,50 @@
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset="utf-8"/>
+<meta http-equiv="content-language" content="bg"/>
+<title>Проверка за изискванията на PRADO</title>
+<style>
+body {font-family:"Verdana";font-weight:normal;color:black;}
+h1 { font-family:"Verdana";font-weight:normal;font-size:18pt; }
+h3 {font-family:"Verdana";font-weight:bold;font-size:11pt}
+p, td {font-family:"Verdana";font-weight:normal;font-size:10pt;}
+table.result {border-collapse: collapse; width: 100%; font-size: 10pt; font-family:"Verdana";}
+td.passed {background-color: #60BF60;border: 1px solid silver; padding: 2px;}
+td.warning {background-color: #FFFFBF;border: 1px solid silver; padding: 2px;}
+td.error {background-color: #FF8080;border: 1px solid silver; padding: 2px;}
+.version {color: gray;font-size:8pt;border-top:1px solid #aaaaaa;}
+</style>
+</head>
+
+<body bgcolor="white">
+<h1>Проверка за изискванията на PRADO</h1>
+<h3>Описание</h3>
+<p>
+Този скрипт проверява дали конфигурацията на вашият сървър отговаря на изискванията
+за приложения базирани на <a href="http://www.pradosoft.com/">PRADO</a>.
+Проверява дали на сървъра е инсталирана подходяща версия на PHP,
+дали са заредени нужните разширения на PHP и дали има направени необходимите
+настройки в php.ini.
+</p>
+<h3>Заключение</h3>
+<p>
+%%Conclusion%%
+</p>
+<h3>Детайли</h3>
+</p>
+%%Details%%
+</p>
+<p>
+<table>
+<tr>
+<td class="passed">&nbsp;</td><td>успешна</td>
+<td class="error">&nbsp;</td><td>неуспешна</td>
+<td class="warning">&nbsp;</td><td>предупреждение</td>
+</tr>
+</table>
+</p>
+<div class="version">
+%%Time%% %%Version%%
+</div>
+</body>
+</html>
