@@ -3,8 +3,9 @@ Version 3.0.1 June 1, 2006
 ENH: Ticket#150 - TDataGrid and TDataList now render table section tags (Qiang)
 ENH: Ticket#152 - constituent parts of TWizard are exposed (Qiang)
 ENH: added sanity check to calling event handlers (Qiang)
-ENH: Added search for quickstart tutorials (Wei)
+ENH: added search for quickstart tutorials (Wei)
 ENH: added support to property tags for template owner control (Qiang)
+ENH: added Bulgarian requirement checker messages (StanProg)
 CHG: Ticket#151 - URL format is modified to handle empty GET values (Qiang)
 CHG: Ticket#153 - TAssetManager now ignores .svn directories (Qiang)
 NEW: TTableHeaderRow, TTableFooterRow and table section support (Qiang)
